# SelsckoGram

./: .client.c.kate-swp  .gitignore  CMakeLists.txt  CMakeLists.txt.user.aee7a2d  README.md  client  client.c  client.c.autosave  database.c  database.h  erproc.c  erproc.h  main.c  proto.c  proto.h  server.c
database/: database.c  database.h  database_auth.c  database_auth.h  database_connect.c  database_connect.h  database_query.c  database_query.h
erproc/: erproc.c  erproc.h
proto/: packet_type.c  packet_type.h  proto.c  proto.h
proto/selsc_client/: selsc_client.h
selscserv_processing/: selscservprocessing.c  selscservprocessing.h
